sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:13: error: value ==- is not a member of Int
			if(v==-1 || getValeur(j)<v)
                            ^