sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() 
{
	var v = -1
	var mem = 0
	
	for(i <- 0 to getNombreValeurs()-2)
	{
		v = -1
		
		for(j <- i to getNombreValeurs()-1)
		{
			if(v==-1 || getValeur(j)<v)
			{
				mem = j
				v = getValeur(j)
			}
		}

		echange(mem,i)
	}
}
